fixed empty cart bug and open/close on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -112,7 +112,7 @@
 }
 
 #nav-menu-button {
-  @apply hidden me-4 mobile:inline-block;
+  @apply hidden me-4 mobile:inline-block cursor-pointer;
 }
 
 #navbar-items {
@@ -205,7 +205,7 @@
 }
 
 .selected-image {
-  @apply relative w-100 mobile:w-screen;
+  @apply w-100 mobile:w-screen;
 }
 
 .selected-image > img {
@@ -213,10 +213,10 @@
 }
 
 .selected-image #select-prev {
-  @apply hidden mobile:inline-block absolute left-4 top-1/2 transform -translate-y-1/2;
+  @apply hidden mobile:inline-block absolute left-4 top-1/3 transform -translate-y-1/2;
 }
 .selected-image #select-next {
-  @apply hidden mobile:inline-block absolute right-4 top-1/2 transform -translate-y-1/2;
+  @apply hidden mobile:inline-block absolute right-4 top-1/3 transform -translate-y-1/2;
 }
 
 #close-image-overlay {
